Fix #303 plus improve transparent scrollbar handling

--- a/data/resources/css/terminix.Adwaita.scrollbar.css
+++ b/data/resources/css/terminix.Adwaita.scrollbar.css
@@ -1,11 +1,9 @@
 /* GTK 3.20 */
 scrollbar { 
-    background: $TERMINAL_BG; 
-    opacity: $TERMINAL_OPACITY; 
+    background-color: alpha($TERMINAL_BG, $TERMINAL_OPACITY); 
 }
 /* GTK 3.18 */
 .scrollbar:not(.slider) { 
-    background: $TERMINAL_BG; 
-    opacity: $TERMINAL_OPACITY;
+    background-color: alpha($TERMINAL_BG, $TERMINAL_OPACITY); 
     border-left: 0px; 
 }
