--- a/data/resources/css/terminix.Radiance.scrollbar.css
+++ b/data/resources/css/terminix.Radiance.scrollbar.css
@@ -1,4 +1,3 @@
 .scrollbar:not(.slider) { 
-    background: $TERMINAL_BG; 
-    opacity: $TERMINAL_OPACITY; 
+    background-color: alpha($TERMINAL_BG, $TERMINAL_OPACITY); 
 }
